# h2ivdi

./: CHANGELOG.txt  Dockerfile  HiVDI_docker_CHANGELOG.txt  README.md  hivdi_config.json  pyproject.toml  requirements.txt  run_h2ivdi.py  run_hivdi.py  setup.py
.github/workflows/: container.yml  deploy.yml
H2iVDI/chains/: __init__.py  bayesian_2steps_chain.py  bayesian_chain.py  inference_chain.py  mcmc_chain.py
H2iVDI/core/: __init__.py  distributions.py  errors.py  filtering.py  geometry.py  l2river_observations.py  likelihoods.py  logger.py  metrics.py
H2iVDI/io/: __init__.py  l2river_inference_dataset.py  pepsi_dataset.py  sos_dataset.py  sword_dataset.py  swot_reach_dataset.py
H2iVDI/models/: __init__.py  dassflow1dst31_model.py  low_froude_kh_model.py  low_froude_model.py  swst3_model.py  swst3lfb_model.py
H2iVDI/processors/: __init__.py  case_processor.py  pepsi_case_processor.py  swot_case_processor.py
deploy/: deploy.sh
deploy/terraform/: confluence-hivdi.tf  main.tf
src/: backwater.cpp  backwater.hpp  common.hpp  effective_section.cpp  effective_section.hpp  geometry.cpp  geometry.hpp  h2ivdi_ext.cpp  standard_step.cpp  standard_step.hpp
terraform/: main.tf
terraform/modules/hivdi/: confluence-hivdi.tf  main.tf  variables.tf
